# hsrdp

./: .gitignore  CMakeLists.txt  README.md  display.launch  move.launch  package.xml  simulate.launch  umi_bridge.cpp  umi_bridge.launch  umi_rtx_100.urdf  urdf.rviz
Arduino_Code/: Encoder.h  MotorController.h  Streaming.h  main.ino  optosensors.ino  ros_umi_bridge.ino
config/: hsrdp_control.yaml  hsrdp_control.yaml~
controller/: arm_joint_trajectory_action_control.yaml  arm_joint_trajectory_action_control.yaml~  gripper_command_action_control.yaml
hsrdp/: CMakeLists.txt  package.xml
hsrdp_action/: CMakeLists.txt  package.xml
hsrdp_arm_motion/: CMakeLists.txt  package.xml
hsrdp_bridge/: CMakeLists.txt  package.xml  (+2 more)
hsrdp_moveit/: .setup_assistant  CMakeLists.txt  package.xml
hsrdp_moveit/config/: HSRDP.srdf  HSRDP.srdf~  controllers-UNKNOWN.yaml  controllers.yaml  controllers.yaml~  controllers??.yaml~  fake_controllers.yaml  fake_controllers.yaml~  joint_limits.yaml  joint_names.yaml  joint_names.yaml~  kinematics.yaml  ompl_planning.yaml
hsrdp_moveit/launch/: HSRDP_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  display_moveit.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hsrdp_moveit/src/: move_group_interface_tutorial.cpp  move_group_interface_tutorial.cpp~  move_group_naughts_and_crosses_interface.cpp  s  test.cpp
hsrdp_moveit/src/unused/: NoughtsAndCrossesControl.cpp
(+56 files in other folders)
